# domain-controller/docs/swagger.json
@@ -15,7 +15,7 @@
         },
         "version": "1.0"
     },
-    "host": "10.10.1.25:8083",
+    "host": "ad-api.ablecloud.io",
     "basePath": "/api/v1",
     "paths": {
         "/login": {
@@ -65,6 +65,89 @@
                     }
                 }
             }
+        },
+        "/user": {
+            "post": {
+                "description": "사용자 생성",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "add New User account",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "사용자 이름",
+                        "name": "username",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "사용자 암호",
+                        "name": "password",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "전화번호",
+                        "name": "phone",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "이메일",
+                        "name": "email",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "이름",
+                        "name": "givenName",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "성",
+                        "name": "sn",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "직급",
+                        "name": "title",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "로그인 성공",
+                        "schema": {
+                            "$ref": "#/definitions/main.userModel"
+                        }
+                    },
+                    "401": {
+                        "description": "로그인 실패",
+                        "schema": {
+                            "$ref": "#/definitions/main.userModel"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "type": "objects"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -82,6 +165,17 @@
                 },
                 "login": {
                     "type": "boolean"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "main.userModel": {
+            "type": "object",
+            "properties": {
+                "msg": {
+                    "type": "string"
                 },
                 "username": {
                     "type": "string"
